--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="products-container">
                 <div class="product">
                     <figure>
-                        <div class="image" style="background-image: url(https://github.com/simran-vermaa/our_products/blob/main/download%20(9).jpg);">
-                            <img src="https://github.com/simran-vermaa/our_products/blob/main/satin.jpg" class="img">
+                        <div class="image" style="background-image: url(https://raw.githubusercontent.com/simran-vermaa/our_products/main/download%20(9).jpg);">
+                            <img src="https://raw.githubusercontent.com/simran-vermaa/our_products/main/satin.jpg" class="img">
                         </div>
                         <figcaption>
                             <div class="name">
@@ -28,8 +28,8 @@
                 </div>
                 <div class="product">
                     <figure>
-                        <div class="image" style="background-image: url(https://github.com/simran-vermaa/our_products/blob/main/lace.jpg);">
-                            <img src="https://github.com/simran-vermaa/our_products/blob/main/download%20(11).jpg" class="img">
+                        <div class="image" style="background-image: url(https://raw.githubusercontent.com/simran-vermaa/our_products/main/lace.jpg);">
+                            <img src="https://raw.githubusercontent.com/simran-vermaa/our_products/main/download%20(11).jpg" class="img">
                         </div>
                         <figcaption>
                             <div class="name">
@@ -42,8 +42,8 @@
                 </div>
                 <div class="product">
                     <figure>
-                        <div class="image" style="background-image: url(https://github.com/simran-vermaa/our_products/blob/main/net2.jpg);">
-                            <img src="https://github.com/simran-vermaa/our_products/blob/main/net.jpg" class="img">
+                        <div class="image" style="background-image: url(https://raw.githubusercontent.com/simran-vermaa/our_products/main/net2.jpg);">
+                            <img src="https://raw.githubusercontent.com/simran-vermaa/our_products/main/net.jpg" class="img">
                         </div>
                         <figcaption>
                             <div class="name">
@@ -59,3 +59,4 @@
     </body>
 
 </html>
+
